# epistasia

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  graph_import.sh
downloader/: .env.example  Dockerfile  main.py  pyproject.toml  sources.json  sources.yaml
downloader/downloader/: conf.py  downloader.py  history.py  post_download.py
downloader/downloader/incremental/: __init__.py  bodacc.py  inpi_rne_companies.py
downloader/tests/: test_conf.py  test_downloader.py  test_history.py
transformer/: .gitignore  .sqlfluff  Dockerfile  dbt_project.yml  profiles.yml  pyproject.toml
transformer/models/bronze/: brz_ademe_aide_financiere.sql  brz_agriculture_subvention.sql  brz_anct_subvention_ville.sql  brz_bodacc.sql  brz_caisse_depots_subvention.sql  brz_commande_publique_concession.sql  brz_commande_publique_marche.sql  brz_culture_convention_subvention.sql  brz_dotation_soutien_territoire.sql  brz_fonds_vert_subvention.sql  brz_france_communes.sql  brz_france_departements.sql  brz_france_regions.sql  brz_idf_subvention_association.sql  brz_sirene_etablissement.sql  brz_sirene_unite_legal.sql  brz_sirene_unite_legale.sql  france_communes.sql  france_departements.sql  france_regions.sql  schema.yml  sources.yml
transformer/models/silver/: schema.yml  svr_commande_publique_concession.sql  svr_commande_publique_marche.sql  svr_ent_commande_publique.sql  svr_ent_sirene_etablissement.sql  (+8 more)
transformer/seeds/: insee_sirene_cat_juridique.csv  insee_sirene_naf.csv  ministere_culture_division.csv  nom_activite_artisanat.csv  seeds.yml
(+55 files in other folders)
